<resources>
    <string name="app_name">Jumbled Words</string>
    <string name="go_to_app_settings">Go to App Settings</string>
    <string name="interstial_id">ca-app-pub-1914893119799187/3161231159</string>
    <string name="ad_banner">ca-app-pub-1914893119799187/1684497951</string>
    <string name="level1">Easy (Level 1 --> 4 letters)</string>
    <string name="level2">Medium (Level 2 --> 5 letters)</string>
    <string name="level3">Hard</string>
    <string name="level1_score">Easy Level Max Score : %1$d</string>
    <string name="level2_score">Medium Level Max Score : %1$d</string>
    <string name="select_a_level_to_start_game">Select a level to start the game</string>
    <string name="click_here_to_start">Click here to start</string>
    <string name="level3_hint">Guess the word from the given letter</string>"
    <string name="dialogue_title">OOPS! Level Locked</string>
    <string name="dialogue_message">You need the best score of at least 20 in Level 1 to unlock this level.</string>
    <string name="new_high_score_title">New High Score!</string>
    <string name="new_high_score_message">Congratulations! You\'ve set a new high score of %1$d</string>
    <string name="some_error_occured">Sorry, some error occured, please start the level again</string>
    <!--
        <string name="ad_banner">ca-app-pub-3940256099942544/6300978111</string>
    -->
</resources>
