<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/screen_bg"
    tools:context="com.stupendous.jumbledwords.MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/jumble_word" />


    <TextView
        android:id="@+id/tv_level1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/level1_score" />

    <TextView
        android:id="@+id/tv_level2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_below="@id/tv_level1Score"
        android:layout_centerHorizontal="true"
        android:text="@string/level2_score" />

    <LinearLayout
        android:id="@+id/llSelectLevel"
        android:layout_below="@id/tv_level2Score"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/select_a_level_to_start_game"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="61dp"
            android:layout_height="59dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/arrow" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/llEasyLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/llSelectLevel"
            android:orientation="horizontal">

            <com.stupendous.jumbledwords.utils.VariableGravityButton
                android:id="@+id/btnLevel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_selector"
                android:padding="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:text="@string/level1"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMediumLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/llEasyLevel"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.stupendous.jumbledwords.utils.VariableGravityButton
                android:id="@+id/btnLevel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_selector"
                android:padding="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/level2"
                android:textStyle="bold"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="129dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.stupendous.jumbledwords.utils.VariableGravityButton
                android:id="@+id/btnLevel3"
                android:layout_width="208dp"
                android:layout_height="89dp"
                android:layout_below="@id/tv_totalScore"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/cloud2"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/level3"
                android:textColor="@color/blue" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gif_image_view"
                android:layout_width="55dp"
                android:layout_height="61dp"
                android:src="@drawable/light" />

        </LinearLayout>


    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_quitGame"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:tint="@color/blue"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:src="@drawable/home"/>

       <!-- <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_startGame"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:tint="#008000"
            android:src="@drawable/start"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"

            android:textSize="18sp"
            android:layout_below="@+id/iv_startGame"
            android:layout_centerInParent="true"
            android:layout_alignBottom="@+id/iv_startGame"
            android:gravity="center"
            android:text="Start" />
        </LinearLayout>-->
    </RelativeLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_banner">

    </com.google.android.gms.ads.AdView>

</RelativeLayout>
